fixed bug where background didn't stretch past original width and height on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ h1 {
 .app {
   width: 100%;
   height: 100vh;
+  min-height: 900px;
   position: relative;
   background-color: rgba(0, 0, 0, 0.4);
   color: rgb(209, 213, 219);
@@ -31,8 +32,9 @@ h1 {
 
 .app:before {
   content: "";
-  background: url("./assets/sunset.jpg") no-repeat center center/cover;
+  background: url("./assets/sunset.jpg") no-repeat;
   position: absolute;
+  min-height: 900px;
   width: 100%;
   height: 100%;
   top: 0;
